data/derived/sp14/progs/unify/prog1525.ml.out
Characters 49-58:
  (fb,fb=b)) ,b);;
  ^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
